@@ -187,6 +187,19 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${compiler-plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <id>default-testCompile</id>
+                            <configuration>
+                                <compilerArgs>
+                                    <arg>--add-modules</arg>
+                                    <arg>jdk.httpserver</arg>
+                                    <arg>--add-reads</arg>
+                                    <arg>io.github.fherbreteau.matrix=jdk.httpserver</arg>
+                                </compilerArgs>
+                            </configuration>
+                        </execution>
+                    </executions>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -440,7 +453,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>@{surefire.jacoco.args}</argLine>
+                    <argLine>@{surefire.jacoco.args} --add-reads io.github.fherbreteau.matrix=jdk.httpserver</argLine>
                 </configuration>
             </plugin>
 
